# -CSLT---Project-Flappy-Bird-Game

./: CMakeLists.txt  Proposal_24127175_24127196_24127233.md  README.md  Timeline_PhanCong_TienDo.md  main.cpp
docs/: Program_Overview.md  Resource_Naming_Conventions.md  Week_01_Huy_Artifact.md  Week_02_Huy_Artifact.md  Week_03_Huy_Artifact.md  Week_04_Huy_Artifact.md
src/config/: GameplayConfig.hpp
src/core/: Game.cpp  Game.hpp  GameState.hpp
src/entities/: Bird.cpp  Bird.hpp  Pipe.cpp  Pipe.hpp
src/managers/: PipeManager.cpp  PipeManager.hpp
src/systems/: Collision.cpp  Collision.hpp  HighScore.cpp  HighScore.hpp  Score.cpp  Score.hpp
src/ui/: UI.cpp  UI.hpp
tests/manual/mechanics/: Collision_Checklist.md
